syntax = "proto3";

option go_package = "./api";

package DotTest;

service DotTest {
    rpc Rule(RuleRequest) returns (RuleResponse);
    rpc News(NewsRequest) returns (NewsResponse);
}

message RuleRequest {
    string site = 1;
    string node = 2;
}

message RuleResponse {
    int32 status = 1;
}

message NewsRequest {
    string filter = 1;
}

message NewsResponse {
    repeated OneNews onenews = 1;

    message OneNews {
        string title = 1;
    }
}
